Add previous articles from third party platforms

--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -3,3 +3,4 @@
 {{- /* Footer custom content area end */ -}}
 <!-- 100% privacy-first analytics -->
 <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<script src="/js/move-external-articles.js"></script>
